# poshub-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  authorizer.py  event.json  main.py  order_processor.py  pyproject.toml  requirements.txt  sam-api.yml  sam-min.yaml  samconfig.toml  template.yml
openapi/: poshub_v1.json
poshub_api/: main.py
poshub_api/api/routers/: basics.py  externals.py  orders.py
poshub_api/domain/: models.py
poshub_api/infrastructure/http/: client.py
poshub_api/services/: order_service.py
poshub_api/shared/: dependencies.py  exception_handler.py  exceptions.py  logging.py  middleware.py  security.py  utils.py
scripts/: assume_lambda_role.sh
src/poshub_api/: main.py
tests/: test_orders.py
